# fiddupay-node

./: .env.example  .env.production  .gitignore  .npmignore  API_DOCUMENTATION.md  API_ENDPOINT_AUDIT.md  BUG-AUTH-001.md  CLEANUP_COMPLETION_SUMMARY.md  COMPLETE_TEST_REPORT.md  COMPREHENSIVE_TEST_RESULTS.md  COMPREHENSIVE_UPDATE_DOCUMENTATION.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEVNET_TOKENS.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_AND_TEST_CLEANUP_TASKS.md  Dockerfile  ENDPOINT_PERFORMANCE_RESULTS.md  ENVIRONMENT_CONFIGURATION_COMPLETE.md  FINAL_COMPILATION_FIX_REPORT.md  FINAL_COMPLETION_SUMMARY.md  FINAL_COVERAGE_VERIFICATION.sh  FINAL_SECURITY_AND_PUBLISHING_SUMMARY.md  FINAL_SUCCESS_REPORT.md  FINAL_SUMMARY.md  FINAL_TEST_REPORT.md  FINAL_TEST_SUMMARY.sh  FINAL_VERIFICATION.sh  FRONTEND_API_INTEGRATION_COMPLETE.md  FRONTEND_PURPOSE.md  GAP_ANALYSIS.md  GITHUB_RELEASE_NOTES.md  IMPLEMENTATION_STATUS.md  MANUAL_GITHUB_RELEASE_INSTRUCTIONS.md  MIGRATION_GUIDE_v2.3.6.md  MIGRATION_RESOLUTION_FINAL.md  NPM_PUBLISHING_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_TEST.md  (+87 more)
backend/: .env copy  .env.example  CHANGELOG.md  Cargo.toml  ecosystem.config.js  performance.rs  start.sh
backend/.sqlx/: query-0c2049004a8c7edb8ebcfc2b475e8c218de9d0a57964cc5c7d3e32926cf22d84.json  query-0cf4781e5ed4bf18869fe3f08362d3f501c650057a8d37403735e029fe6d0756.json  query-15bb54915506075474b3f2ebb88202a0fa81bf17fec53d325a94fb76c6b86086.json  query-1aa5a1316145588a9c7296083bb57f9a0929a271d8889f005e6fe80210e1e1b2.json  query-1b6302b026cebc6aadd0a6f9ca62188c8862779581f1711c7bb14f428d0a4871.json  query-269c4d86d85dff886e3212516b7668075ddf8b4042bf9edb87c0f6f39b8af2fe.json  query-2f57a1130da6e58ef0f81d882b5d17bbaa914ddfb00579803cb7e1aacf96d7ff.json  query-332981f8969b7c80df9b255dfed55d81ee4ea7f6ea6b8b043ed2528c6089a868.json  query-35e2935522a98b880241d2c639277cdcf4e3c5aee4a5cb3cbf3995a7578ff1ad.json  query-3b0099eb00bfe15a74f9d2c6e31211c50491fb4cf495a7b73ad933a3af08ae46.json  query-3f68cfb2cc0a999e91d7f56bc74a0bdfc81a636f88de7d3561afca8bdd6ca2d6.json  query-550e7f519715c52746f8a729e2dc677960994f49ec0bee9f14e95f314d7b60e3.json  query-57d9cc1dba5a37cb5d871896f0001ddbba997970c2ca087b70be5516da3aed66.json  query-5ad3ebb919c4173771fc8f41863b8d77d3dad77c20c619eea52ecfd7e5cd3fa5.json  query-668ad1dc316990eccffe185cf45ead8a6e248a998f64b956f2251564e6cdffb8.json  query-6ae430ef8b8c9f91853ad92879c2acdd22f75d3dd4eededdc2e51146a6cfa72f.json  query-76d2374385ee166d5ce86389320e5c3fcc83b986cb7ac01869a53688abb0df71.json  query-78e6629fe371b7bcaa67f967f4af91a5ba48b8b229895e9b38ded9ebd7e2c554.json  query-82573f36f987e7b1ca59369c70059b84cf0952627a1f6d2bfd82be02d994e3d7.json  query-84d7f0acd2f66068a86ee96c5ed60ddc3693675e591734b5a593fc9649609164.json  query-879f867f296e8914c2949ea31c084b55970807a11dda8150d3c34b84e3c9d676.json  query-9328bdb1bdb8efd48acff0f4aee7ad66b87df8a781b7aede4dd7917e80ce16ac.json  query-b33fc44f047ab5e3ebf4b385a954e87af6411cc1696b238104f90d9c4c566984.json  query-bbe0d6a04d12fc7cba59fdfc288a6dba7fc5f8f119893b12c07f06a687aaf196.json  query-bc853b9523b90c4e6fd90505125755e2f5a34463c6a871bef2e4adfe74dc41d2.json  query-bea832258c9510955bfbc6179dbdf5635a1182bdfe6ec9a0c362e2260480a256.json  query-c1c3a25ec25acaaf06cc424dfbd77ba30d2173eb873879bf8c2991d0c34c4410.json  query-c62b7127a2f3785674ad43f66cb9c74fe470829eeb17031527bc7c434dce2a66.json  query-cdeace79f5a0220acc762832378296d586fa8b95e8c91cf60a264a51ad1d204c.json  query-d0d18a56c2b630d9baafe84a77af3f1cfb1404290bb2de5c8a6f5963cedcf9c9.json  query-d2eb9b16a4a287c30513a247c806ce32ebcc8c31401ccdad099e86bbf2dffebe.json  query-d4525d5b1acfc4115e9a882a44a7c71b1edbb9133e24e464a2a55ddb06427e53.json  query-e11683ea37e5a50b321e0fc043d4e6c810cb713780acc6443fa5c487c1d79512.json  query-e588e26ef0cc156ed35b09ca3bf5ef41769a0a1c5a8e45337784d2ff8a185aa2.json  query-e89a949dfe4bb66d2000ed186ed9b174ca419f9289499e0021455dba4decb05d.json  query-ee3abbdf32e44643bcda5b9dc06647a8834e6ede1f655a3aad0ec4dfbd3d91df.json  query-f4ca81a60cb6ea23dc4c7e16cd7eda62108b77614f65cebe64227ad091d63df9.json
backend/api/: handlers.rs  routes.rs
backend/middleware/: advanced_security.rs  mod.rs  per_key_rate_limit.rs  rate_limit.rs
backend/migrations/: .gitkeep  20240101000002_create_payment_tables.sql  20240101000005_withdrawals.sql  20240101000006_roles_invoices_2fa.sql  20240101000008_non_custodial_payments.sql  20240101000009_address_only_mode.sql  20240101000009_hybrid_wallet_system.sql.skip  20240101000010_add_customer_pays_fee.sql  (+6 more)
backend/src/: error.rs  (+9 more)
(+559 files in other folders)
