[package]
name = "fiddupay"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal", "migrate", "ipnetwork", "uuid"] }

# Serialization
serde = { version = "=1.0.227", features = ["derive"] }
serde_json = "1.0"

# Decimal handling
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket for real-time gas monitoring
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Blockchain transaction libraries (minimal set)
web3 = "0.19"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Crypto/Hashing
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"

# UUID/ID generation
uuid = { version = "1.6", features = ["v4", "serde"] }
nanoid = "0.4"

# URL parsing and validation
url = "2.5"

# Environment variables
dotenvy = "0.15"

# Async utilities
async-trait = "0.1"

# Template engine and QR codes
askama = { version = "0.12", features = ["with-axum"] }
qrcode = "0.14"
image = "0.24"
base64 = "0.22"
futures = "0.3"

# Rate limiting
governor = "0.6"

# Base58 encoding (for Solana addresses)
bs58 = "0.5"

# Network utilities
ipnetwork = "0.20"

# Email (SMTP)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# 2FA (TOTP)
totp-lite = "2.0"
base32 = "0.4"

# Encryption
aes-gcm = "0.10"
rand = "0.8"

# Blockchain key generation (minimal set)
secp256k1 = { version = "0.28", features = ["rand"] }  # For EVM chains
tiny-keccak = { version = "2.0", features = ["keccak"] }  # For EVM addresses

# Ethereum address validation - using simpler alternative
# ethers = { version = "2.0", default-features = false }

# Solana SDK (for address validation and RPC) - commented out due to dependency conflicts
# Can use simple validation instead
# solana-client = "1.18"
# solana-sdk = "1.18"

# Prometheus metrics
prometheus = "0.13"
validator = { version = "0.20.0", features = ["derive"] }
html-escape = "0.2.13"

[dev-dependencies]
proptest = "1.4"
mockall = "0.12"
